--- a/GraphVisualization/GraphVisualization.csproj
+++ b/GraphVisualization/GraphVisualization.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Core\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
+  </ItemGroup>
+
 </Project>
